# serenade

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  _Default.toml  docker_local_build.sh  docker_local_interactively.sh  docker_local_run.sh  docker_publish_to_repo.sh  docker_repo_interactively.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
benches/: comparisons.rs  weighted_intersection.rs  weighted_intersection_new.rs
config/: _Default.toml
docs/: CONFIG.md  DOCKER.md  HYPERPARAMETER_SEARCH.md  Installation.md  Prediction.md  Preparation.md  RELEASE-TAG.md  index.md
examples/: weighted_intersection_private_data.rs  weighted_intersection_private_data_hashmaps.rs  weighted_intersection_random_data.rs
src/: config.rs  config_processors.rs  dataframeutils.rs  io.rs  lib.rs  objective.rs  stopwatch.rs
src/endpoints/: index_resource.rs  mod.rs  recommend_resource.rs
src/hyperparameter/: hyperparamgrid.rs  mod.rs
src/metrics/: coverage.rs  evaluation_reporter.rs  f1score.rs  hitrate.rs  mod.rs  mrr.rs  ndcg.rs  popularity.rs  precision.rs  recall.rs
src/sessions/: mod.rs
src/vmisknn/: mod.rs  similarity_hashed.rs  similarity_indexed.rs  tree_index.rs  vmis_index.rs  vmisknn_index.rs  vmisknn_index_noopt.rs  vmisknn_index_smallopt.rs  vsknn_index.rs
